# Kubernetes_ArgoCD

./: .gitignore  .pre-commit-config.yaml  Dev-Notes  Dev-Notes.md  Guide-DockerOptimizationSteps.md  Makefile  Makefile_backup  Readme  docker-compose-prod.yml  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  mypy.ini  pyproject.toml  pythonworkspace.code-workspace
.github/workflows/: cd.yml  cd.yml_back  ci-cd-docker-helm.yml  ci-cd.yml  ci.yml
Docker/: grafana-dashboards.yml  grafana-datasource.yml  prometheus.yml
Docker/dashboards/: myapp-observability.json
Docs/: Dev-Notes.md
Docs/WithKurbernetes/: Guide-MINIKUBE_MAKEFILE.md  Guide-Observability.md
charts/myapp/: values-local.yaml  values.yaml
charts/myapp/templates/: servicemonitor.yaml
charts/mylearning/: Chart.yaml  readme  values.yaml
charts/mylearning/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  job-smoke.yaml  job-tests.yaml  secret.yaml
environments/dev/: values-myapp.yaml
environments/prod/: values-myapp.yaml
environments/staging/: values-myapp.yaml
gitops/: argocd-appset-logging.yaml  readme
gitops/argocd/: argocd-cm.yaml
gitops/prod/: argocd-app-monitoring.yaml
infra/k8s/logging/: Chart.yaml  loki-stack-values-dev.yaml  loki-stack-values-prod.yaml  namespace.yaml  (+2 more)
myapp/: Dockerfile  docker-compose.yml  pyproject.toml
myapp/tests/: conftest.py  test_db.py
mylearning/: pyproject.toml
mylearning/src/exercises/: fibonacci.py
mylearning_backup/: Dockerfile
mylearning_backup/tests/: test_testexcercise.py
(+67 files in other folders)
