[project]
name = "mylearning"
version = "0.1.0"
description = ""
authors = [
    {name = "hcrmclass",email = "hcrmclass@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
